Add file reader test