@@ -2,8 +2,8 @@ import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
+import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class FileReader {
 
@@ -14,9 +14,8 @@ public class FileReader {
              BufferedReader bufferedReader = new BufferedReader(new InputStreamReader(inputStream))) {
 
             return bufferedReader.lines()
-                .map(String::trim)
-                .map(String::toLowerCase)
-                .collect(Collectors.toList());
+                .flatMap(line -> Arrays.stream(TextUtil.trimAndSplitWord(line)))
+                .toList();
 
         } catch (IOException io) {
             throw new Exception("Error happened during reading of the file");
